# inflation_web

./: .clineignore  .gitignore  Dockerfile  README.md  data_download.py  dev.ipynb  docker-compose.yml  hicp_weights_download.py  metadata_download.R  nace_map_download.R  ppi_download.py  pyproject.toml
.github/workflows/: docker-build.yml
src/: app.py  common.js  index.html  index.js  main.py  manifest.json  ppi.html  ppi.js  pyscript_config.json  styles.css  sw.js  weights.html  weights.js
src/assets/: last_update.txt  ppi_last_update.txt
src/assets/maps/: coicop18.csv  geo.csv  geo_ppi.csv  nace_r2.csv  unit.csv  unit_ppi.csv
