[project]
name = "inflation-web"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Luigi Palumbo"}
]
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=23.0.1",
    "sdmx1>=2.25.1",
    "tenacity>=9.1.4",
]

[dependency-groups]


[tool.flet]
org = "com.mycompany"
product = "inflation-web"
company = "LP"
copyright = "Copyright (C) 2023-2026 by LP"

[tool.flet.app]
path = "src"
